--- a/configure.ac
+++ b/configure.ac
@@ -119,14 +119,14 @@ fi
 
 ######################################################
 
-AC_ARG_ENABLE([plugin_msrmon],
-  [AS_HELP_STRING([--disable-plugin-msrmon],
-    [Enable the MSRMON example plugin @<:@yes@:>@])],
-  [plugin_msrmon="$enableval"],
-  [plugin_msrmon="yes"])   
-AM_CONDITIONAL([PLUGIN_MSRMON], [test x$plugin_msrmon = xyes])
-if test x$plugin_msrmon = xyes; then
-  AC_DEFINE_UNQUOTED(ENABLE_PLUGIN_MSRMON, 1, "")
+AC_ARG_ENABLE([plugin_idtmon],
+  [AS_HELP_STRING([--disable-plugin-idtmon],
+    [Enable the IDTMON example plugin @<:@yes@:>@])],
+  [plugin_idtmon="$enableval"],
+  [plugin_idtmon="yes"])   
+AM_CONDITIONAL([PLUGIN_IDTMON], [test x$plugin_idtmon = xyes])
+if test x$plugin_idtmon = xyes; then
+  AC_DEFINE_UNQUOTED(ENABLE_PLUGIN_IDTMON, 1, "")
 fi
 
 AC_ARG_ENABLE([plugin_syscalls],
@@ -396,5 +396,5 @@ CPUIDmon:   $plugin_cpuidmon
 Debugmon:   $plugin_debugmon
 Socketmon:  $plugin_socketmon
 
-MSRmon:   $plugin_msrmon
+IDTmon:   $plugin_idtmon
 -------------------------------------------------------------------------------])
