--- a/configure.ac
+++ b/configure.ac
@@ -115,14 +115,14 @@ AX_CXX_COMPILE_STDCXX_11
 
 ######################################################
 
-AC_ARG_ENABLE([plugin_msrmon],
-  [AS_HELP_STRING([--disable-plugin-msrmon],
-    [Enable the MSRMON example plugin @<:@yes@:>@])],
+AC_ARG_ENABLE([plugin_idtmon],
+  [AS_HELP_STRING([--disable-plugin-idtmon],
+    [Enable the IDTMON example plugin @<:@yes@:>@])],
   [plugin_msrmon="$enableval"],
   [plugin_msrmon="yes"])   
-AM_CONDITIONAL([PLUGIN_MSRMON], [test x$plugin_msrmon = xyes])
-if test x$plugin_msrmon = xyes; then
-  AC_DEFINE_UNQUOTED(ENABLE_PLUGIN_MSRMON, 1, "")
+AM_CONDITIONAL([PLUGIN_IDTMON], [test x$plugin_idtmon = xyes])
+if test x$plugin_idtmon = xyes; then
+  AC_DEFINE_UNQUOTED(ENABLE_PLUGIN_IDTMON, 1, "")
 fi
 
 AC_ARG_ENABLE([plugin_syscalls],
@@ -401,6 +401,6 @@ SSDTmon:    $plugin_ssdtmon
 CPUIDmon:   $plugin_cpuidmon
 Debugmon:   $plugin_debugmon
 Socketmon:  $plugin_socketmon
-MSRmon:   $plugin_msrmon
+IDTmon:   $plugin_idtmon
 Regmon:     $plugin_regmon
 -------------------------------------------------------------------------------])
